<resources>
    <string name="app_name">First Aid Log</string>
    <string name="action_settings">Settings</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="addEventDialog">Add new Event</string>
    <string name="name_of_the_event">name of the event</string>
    <string name="event_add_toast">Event added</string>
    <string name="edit_event_popup">Edit event</string>
    <string name="delete_event_popup">Delete event</string>
    <string name="edit_participant_popup">Edit participant</string>
    <string name="delete_participant_popup">Delete participant from this event</string>
    <string name="fab_add_new">Add new participant</string>
    <string name="fab_add_db">Add participant from DB</string>
    <string name="edit_injury_popup">Edit Incident</string>
    <string name="delete_injury_popup">Delete Injury</string>
    <string name="about_the_app">About the app</string>
    <string name="useful_tips">Useful tips</string>
    <string name="add_db_part_info">Here you can choose participants in database and add them in bulk.</string>
    <string name="btn_add_from_db">Add selected participants to this event</string>
    <string name="starting_date">Starting date</string>
    <string name="photo">photo</string>
    <string name="event">Event</string>
    <string name="name_of_an_event">Name of an event</string>
    <string name="location_of_an_event">Location of an event</string>
    <string name="ending_date">Ending date</string>
    <string name="event_leader">Event leader</string>
    <string name="full_name_of_event_leader">Full name of event leader</string>
    <string name="email_adress_of_event_leader">Email address of event leader</string>
    <string name="phone_number_of_event_leader">Phone number of event leader</string>
    <string name="medic">Medic</string>
    <string name="full_name_of_a_medic">Full name of a medic</string>
    <string name="email_adress_of_medic">Email address of medic</string>
    <string name="phone_number_of_medic">Phone number of medic</string>
    <string name="participant_info">Participant info</string>
    <string name="is_user_active">Is user active?</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="personal_identification_number">Personal identification number</string>
    <string name="insurence_company">Insurance company</string>
    <string name="notes_optional">Notes (optional)</string>
    <string name="contact_to_parents">Contact to parents</string>
    <string name="email_to_parents">Email to parents</string>
    <string name="phone_number_to_parents">Phone number to parents</string>
    <string name="incident_title">Incident title</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="incident_description">Incident description</string>
    <string name="description_of_medication">Description of medication</string>
    <string name="take_photo_of_indicent">Take photo of Indicent</string>
    <string name="oh_no_it_seems_that_there_s_no_data_to_display_start_adding_some_using_button">Oh no, it seems that there\'s no data to display. Start adding some using + button.</string>
    <string name="show">Show</string>
    <string name="share">Share</string>
    <string name="recommended_equipment_for_the_first_aid_kit">Recommended equipment for the first aid kit</string>
    <string name="medicinal_products">Medicinal products</string>
    <string name="bandage_and_other_medical_supplies">Bandage and other medical supplies</string>
    <string name="other_equipment">Other equipment</string>
    <string name="overview">Overview</string>
    <string name="author">Author</string>
    <string name="about_text">This app was developed as a diploma thesis on CULS (Czech University of Life Sciences Prague). Main purpose is to help volunteer medics on public events like summer camps to maintain medical recods more efficiently.</string>
    <string name="contact">Radim Bureš - radim.bures@gmail.com</string>
    <string name="rate">Rate FirstAidLog on Google Play</string>
    <string name="tips1">tablets or suppositories for headache, teeth (analgesics)</string>
    <string name="tips2">tablets or suppositories to reduce elevated temperature (antipyretics)</string>
    <string name="tips3">anti-nausea tablets (vehicle antiemetics)</string>
    <string name="tips4">charcoal</string>
    <string name="tips5">nasal drops for nasal breathing (otorhinolaryngology)</string>
    <string name="tips6">drops, solution (syrup) or cough tablets (antitussive, expectorant)</string>
    <string name="tips7">mouthpiece for disinfection of oral cavity and pharyngeal pain (stomatology)</string>
    <string name="tips8">ointment or healing accelerator such as burns (dexpanthenol spray)</string>
    <string name="tips9">eye drops or eye ointment with disinfectant effect, eye water for eye flushing (ophthalmology)</string>
    <string name="tips10">ointment or gel when insect bites (local antihistamines)</string>
    <string name="tips11">tablets with systemic allergic reaction (total antihistamine)</string>
    <string name="tips12">a product for skin disinfection and surface wounds</string>
    <string name="tips13">disinfectant on the wound site</string>
    <string name="tips14">inert ointment or greasex</string>
    <string name="tips15">gauze hydrophilic folded sterile compression, various sizes</string>
    <string name="tips16">patch on coil, different dimensions</string>
    <string name="tips17">wound dressing, different sizes</string>
    <string name="tips18">elastic bandage, various dimensions</string>
    <string name="tips19">Bandage sterile, various sizes</string>
    <string name="tips20">throttle bandage</string>
    <string name="tips21">scarf triple</string>
    <string name="tips22">cotton wool and cellulose wadding</string>
    <string name="tips23">medical thermometer</string>
    <string name="tips24">resuscitation strap</string>
    <string name="tips25">anatomical tweezers</string>
    <string name="tips26">surgical tweezers straight</string>
    <string name="tips27">Medical wooden blades</string>
    <string name="tips28">medical rubber gloves</string>
    <string name="tips29">PVC stripper 45 x 55 cm</string>
    <string name="tips30">fixation plates, various dimensions</string>
    <string name="tips31">scissors</string>
    <string name="tips32">closing pins, various sizes</string>
    <string name="events">Events</string>
    <string name="participant_db">Participants database</string>
    <string name="list_participants">List of participants</string>
    <string name="event_info">Event information</string>
    <string name="incident_list">List of incidents</string>
    <string name="personal_info">Personal information</string>
    <string name="generate_pdf_report_using_export_button_bellow">Generate pdf report using export button bellow</string>
    <string name="no_particpants_in_db">No participants in DB, add some first</string>
    <string name="date_separator">&#160;-&#160;</string>
    <string name="share_file">Share File</string>
    <string name="email_text">Hi, I\'m sending you medical report of your child in attachment.
        \n
        \n
        Best Regards
        \n
        Event management</string>
    <string name="email_text1">Hi, I\'m sending medical report from our event.
        \n
        \n
        Best Regards
        \n
        Event management</string>
    <string name="email_sub1">Medical report for&#160;</string>
    <string name="email_subject2">&#160;from event&#160;</string>
    <string name="pdf_title">Medical Report for </string>
    <string name="personal_identification_number2">Personal identification number: %1$s</string>
    <string name="insurence_company2">Insurance company: %1$s</string>
    <string name="notes_optional2">Notes: %1$s</string>
    <string name="email_to_parents2">Email to parents: %1$s</string>
    <string name="phone_number_to_parents2">Phone number to parents: %1$s</string>
    <string name="medical_report_pdf">Medical report in PDF</string>
    <string name="full_name_of_event_leader2">Full name of event leader: %1$s</string>
    <string name="email_adress_of_event_leader2">Email address of event leader: %1$s</string>
    <string name="phone_number_of_event_leader2">Phone number of event leader: %1$s</string>
    <string name="full_name_of_a_medic2">Full name of a medic: %1$s</string>
    <string name="email_adress_of_medic2">Email address of medic: %1$s</string>
    <string name="phone_number_of_medic2">Phone number of medic: %1$s</string>
    <string name="number_of_partincipants">Number of participants: %1$s</string>
    <string name="photos">Photos</string>
    <string name="no_pdf_viewer">You cannot view .pdf file. Install PDF viewer from Play Store.</string>
    <string name="icon_app">Icon app</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
