<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="radimbures.firstaidlog.AddEvent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/event"
            android:textSize="25sp"
            android:textColor="@color/colorAccent"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_name_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_of_an_event" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_location_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location_of_an_event" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2"
            android:orientation="horizontal"
            android:baselineAligned="false">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_datestart"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_datestart_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/starting_date" />
        </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_dateend"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_dateend_event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/ending_date" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/event_leader"
            android:textSize="25sp"
            android:textColor="@color/colorAccent"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_nameleader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_nameleader_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name_of_event_leader" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_emailleader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_emailleader_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email_adress_of_event_leader" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_phoneleader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_phoneleader_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/phone_number_of_event_leader" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/medic"
            android:textSize="25sp"
            android:textColor="@color/colorAccent"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_namemedic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_namemedic_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name_of_a_medic" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_emailmedic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_emailmedic_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email_adress_of_medic" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_phonemedic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_phonemedic_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/phone_number_of_medic" />
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>
</ScrollView>
