<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="radimbures.firstaidlog.ParticipantInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="@string/medical_report_pdf"
            android:textSize="20sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/filename"
                android:textSize="15sp"
                android:text="@string/generate_pdf_report_using_export_button_bellow"
                />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            >
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/show"
                android:text="@string/show"
                tools:ignore="ButtonStyle" />
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/share"
                android:enabled="false"
                android:text="@string/share"
                tools:ignore="ButtonStyle" />
        </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:id="@+id/name" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rc" />
    <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ins_company" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/notes" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autoLink="email"
            android:id="@+id/parents_email" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:autoLink="phone"
            android:linksClickable="true"
            android:id="@+id/parents_phone" />
    </LinearLayout>

</FrameLayout>
